@@ -94,7 +94,7 @@ All open support tickets deleted successfully! = Alle offenen Supportanfragen wu
 All out = Alle<br>Ausgänge
 All resellers = Alle Wiederverkäufer
 All traffic = Gesamttransfer
-All users & resellers = Alle Kunden und Wiederverk&auml;ufer
+All users & resellers = Alle Kunden und Wiederverkäufer
 All users = Alle Kunden
 Already in: = Benutzer aus Gruppe
 Apache logfiles = Apache Logdateien
@@ -1016,7 +1016,7 @@ ISPCP - Users/Edit = ISPCP Benutzer bearbeiten
 ISPCP - Virtual Hosting Control System = ISPCP - Virtual Hosting Control System
 ISPCP Admin / System Tools / Server Status = ISPCP - Virtual Hosting Control System
 ISPCP Client : Add Alias = ISPCP Client : Add Alias
-ISPCP Control Panel = ISPCP Administrationsoberfl&auml;che
+ISPCP Control Panel = ISPCP Administrationsoberfläche
 ISPCP debugger = ISPCP Debugger
 ISPCP Reseller : Add Alias = ISPCP - Virtual Hosting Control System
 ISPCP updates = ISPCP Updates
@@ -1044,7 +1044,7 @@ Webspace = Speicherplatz / Transfer
 Webstatistics = Web Statistiken
 Webtools = Webtools
 Weekday(s): = Wochentag(e):
-which has limits for the <b> = welcher Beschr&auml;nkungen hat für das <b>
+which has limits for the <b> = welcher Beschränkungen hat für das <b>
 Which has limits for the <b> = Welcher Beschränkungen hat für das <b>
 Wildcards as % and ? are not allowed! = Wildcards ausser % aund ? sind nicht erlaubt!
 Wrong data input! = Ungültige Dateneingaben
